--- a/cesar.html
+++ b/cesar.html
@@ -16,40 +16,16 @@
         <p> <textarea id="target" cols="50" rows="10"
                 style="width:40em; height:15em">THE QUICK BROWN FOX JUMPED OVER THE LAZY DOG.</textarea></p>
         <div style="margin-bottom: 12px; margin-top: 12px">
-            <label for="shift">Shift Amount:</label><br>
-            <select id="shift" style="width:50px;">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-                <option value="25">25</option>
-            </select>
+
+            <input id="shift" type="number" default="1" max="26" min="1">
         </div>
         <div>
-            <input type="button" id="encrypt" value="Encrypt" onclick="runScript();" disabled=""><input type="button"
-                id="decrypt" value="Decrypt" onclick="reverse();">
+            <button onclick="app.doCrypt(false);">Encrypt</button>
+            <button onclick="app.doCrypt(true);">Decrypt</button>
         </div>
     </form>
 </body>
+<script src="JS/cesar1.js"></script>
+
 
 </html>
