--- a/vigenere.html
+++ b/vigenere.html
@@ -7,26 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Cifrado Vigenere</title>
 </head>
 
 <body>
     <table xmlns="http://www.w3.org/1999/xhtml" class="noborder">
         <tbody>
             <tr>
-                <td><label for="text">Text:</label></td>
+                <td><label for="text">Ingresa el texto</label></td>
                 <td><textarea id="text" cols="50" rows="10"
-                        style="width:40em; height:15em">THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG.</textarea></td>
+                        style="width:40em; height:15em">ABC</textarea></td>
             </tr>
             <tr>
-                <td><label for="key">Key:</label></td>
+                <td><label for="key">Llave:</label></td>
                 <td><input type="text" value="abc" id="key" style="width:10em" /></td>
             </tr>
             <tr>
                 <td></td>
                 <td>
-                    <button onclick="app.doCrypt(false);">Encrypt</button>
-                    <button onclick="app.doCrypt(true);">Decrypt</button>
+                    <button onclick="app.doCrypt(false);">Encriptar</button>
+                    <button onclick="app.doCrypt(true);">Desencriptar</button>
                 </td>
             </tr>
         </tbody>
