--- a/index.html
+++ b/index.html
@@ -11,26 +11,49 @@
     <title>Cifrados</title>
 </head>
 
-<body>
-    <div style="height: 70px;">
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <img height="42px" width="42px"
-                    src="https://images.emojiterra.com/google/android-nougat/512px/1f431.png">
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-            </li>
-        </ul>
+<body style="background-color: black;">
+    <div style="height: 200px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a href="index.html"><img height="75" width="75"
+                        src="https://avatarfiles.alphacoders.com/149/149122.jpg"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                        <li class="nav-item ">
+
+                            <a class="nav-link active fs-2" aria-current="page" href="#">Cifrado de texto</a>
+
+                        </li>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <li class="nav-item">
+                                        <td class="align-middle"><a class="nav-link fs-4 disabled" href="#">Carapia Aguilar</a></td>
+                                    </li>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <li class="nav-item ">
+                                       <td class="align-middle"><a class="nav-link disabled fs-4">José Manuel</a></td>
+                                    </li>
+                                </tr>
+                            </tbody>
+                        </table>
+                        </tbody>
+                        </table>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
     <div name="cards" class="bd-example bd-example-placeholder-cards d-flex justify-content-around">
         <div name="card1" class="card" aria-hidden="true">
