--- a/vigenere.html
+++ b/vigenere.html
@@ -10,27 +10,71 @@
     <title>Cifrado Vigenere</title>
 </head>
 
-<body>
-    <table xmlns="http://www.w3.org/1999/xhtml" class="noborder">
-        <tbody>
-            <tr>
-                <td><label for="text">Ingresa el texto</label></td>
-                <td><textarea id="text" cols="50" rows="10"
-                        style="width:40em; height:15em">ABC</textarea></td>
-            </tr>
-            <tr>
-                <td><label for="key">Llave:</label></td>
-                <td><input type="text" value="abc" id="key" style="width:10em" /></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <button onclick="app.doCrypt(false);">Encriptar</button>
-                    <button onclick="app.doCrypt(true);">Desencriptar</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<body style="background-color: black;">
+    <div style="height: 200px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a href="index.html"><img height="75" width="75"
+                        src="https://avatarfiles.alphacoders.com/149/149122.jpg"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item ">
+                            <a class="nav-link active fs-2" aria-current="page" href="index.html">Cifrado de texto</a>
+                        </li>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <li class="nav-item">
+                                        <td class="align-middle"><a class="nav-link fs-4 disabled" href="#">Carapia Aguilar</a></td>
+                                    </li>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <li class="nav-item ">
+                                       <td class="align-middle"><a class="nav-link disabled fs-4">José Manuel</a></td>
+                                    </li>
+                                </tr>
+                            </tbody>
+                        </table>
+                        </tbody>
+                        </table>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="container-sm">
+        <figure class="text-center">
+            <blockquote class="blockquote">
+                <p style="color:aliceblue">Ingresa el texto que quieras cifrar.</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+                <cite title="Source Title">Cifrado Vigenere</cite>
+            </figcaption>
+        </figure>
+        <div class="mb-3">
+            <label style="color:aliceblue">Texto</label>
+            <textarea style="background-image: linear-gradient(to left top, #cbf2f0, #cbf0fc, #d5ebff, #e7e5ff, #f8dff6);"class="form-control" id="text" rows="3">ABC</textarea>
+        </div>
+        <label style="color:aliceblue">Llave</label>
+        <input style="background-image: linear-gradient(to left top, #cbf2f0, #cbf0fc, #d5ebff, #e7e5ff, #f8dff6);"class="form-control" type="text" id="key" placeholder="Ingresa la llave">
+        <div class="mb-3">
+            <label></label>
+            <div class="d-flex justify-content-around">
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="app.doCrypt(false);">Encriptar</button>
+            <button type="button" class="btn btn-outline-success btn-lg" onclick="app.doCrypt(true);">Desencriptar</button>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="JS/vigenere.js"></script>
+
 </html>
